@@ -1,5 +1,14 @@
-<STRONG>Changes since 0.9.4</STRONG><BR>
-The build 0.9.4.1209 includes the following changes:<BR>
+<STRONG>Changes since 0.9.4</STRONG><BR><BR>
+The build 0.9.4.1217 includes the following changes:<BR>
+<UL>
+	<LI> Fixed the tabbar-disappearing bug (#1613110).</LI>
+	<LI> Fixed a bold color bug.</LI>
+	<LI> Fixed transparency bug #1609022.</LI>
+	<LI> Set echok when launching new sessions (#1472673). </LI>
+	<LI> Changed the default for "use default title with dynamic title" to NO.</LI>
+	<LI> Changed the wording for the "dynamic title" option.</LI>
+</UL>
+The build 0.9.4.1208 includes the following changes:<BR>
 <UL>
 	<LI> Added support for xterm's 256-color mode.</LI>
 	<LI> Added an option in the terminal profile to allow default session name not to be overwritten by dynamic tab name changes.</LI>
