@@ -1,3 +1,8 @@
+2006-12-15	fabian
+
+	* Fixed the tabbar-disappearing bug (#1613110).
+	* Set echok when launching new sessions (#1472673).
+	
 2006-12-14	fabian
 
 	* Fixed another bold color bug.
